# gtm-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  start-mcp.py  start-mcp.sh
.claude/: settings.json
.claude/agents/: company-qualifier.md  reply-handler.md
.claude/commands/: launch.md  leadgen.md  outreach.md  qualify.md  replies.md
.claude/skills/apollo-filter-mapping/: SKILL.md
.claude/skills/company-qualification/: SKILL.md
.claude/skills/email-sequence/: SKILL.md
.claude/skills/linkedin-sequence/: SKILL.md
.claude/skills/manager-leadgen/: SKILL.md
.claude/skills/offer-extraction/: SKILL.md
.claude/skills/pipeline-state/: SKILL.md
.claude/skills/quality-gate/: SKILL.md
.claude/skills/reply-classification/: SKILL.md
src/gtm_mcp/: __init__.py  config.py  server.py  workspace.py
src/gtm_mcp/reference/: industry_tags.json
src/gtm_mcp/tools/: __init__.py  apollo.py  assignment.py  campaign_push.py  getsales.py  pipeline.py  scraping.py  sheets.py  smartlead.py
test/: inxy-affiliates-checklist.md  inxy-affiliates-expected.md  run8-checklist.md  run8-issues.md
